--- a/style.css
+++ b/style.css
@@ -28,10 +28,13 @@ body {
 }
 
 /* Add styles here! */
+header {
+  border-bottom: 8px solid var(--gray-medium);
+}
 
 .max-width-wrapper {
   max-width: 1200px;
-  margin: auto;
+  margin: 0 auto;
 }
 
 .intro-chunk {
@@ -40,20 +43,16 @@ body {
   padding-left: 24px;
   padding-right: 24px;
   padding-bottom: 24px;
+  max-width: 320px;
 }
 
 .title {
   padding-bottom: 15px;
 }
 
-.intro-chunk p {
-  max-width: 320px;
-}
-
 .card {
-  max-width: 1000px;
+  padding-top: 8px;
   padding-left: 24px;
-  padding-right: 24px;
   padding-bottom: 24px;
 }
 
@@ -65,13 +64,15 @@ main {
   height: 100%;
   padding-block-start: var(--spc--xl);
   background-color: var(--gray-dark);
-  box-shadow: 0 -6px 0 0 var(--gray-medium);
 }
 
 main .max-width-wrapper {
-  padding-top: 1px;
   background-color: var(--white);
-  box-shadow: 0 6px 0 0 var(--gray-medium);
+  border-bottom: 8px solid var(--gray-medium);
+}
+
+h2 {
+  margin: 0;
 }
 
 .indented-heading {
@@ -82,5 +83,5 @@ main .max-width-wrapper {
   padding-left: 31px;
   max-width: fit-content;
   background-color: var(--gold-lighter);
-  box-shadow: 0 6px 0 0 var(--gold-darker);
+  border-bottom: 8px solid var(--gold-darker);
 }
